add swagger doc auto
